# ookami

./: Cargo.toml  README.md  go.mod  go.sum  main.go  process.go  scan.go  script.go  startup.go  test.lua
assets/: evergreen.txt  hairclip.txt  mio.txt
lua/modules/fs/: fs.go
src/: main.rs  process.rs  startup.rs  utils.rs
