[package]
name = "ookami"
description = "A shell made in rust"
authors = ["Ján Gajdoš <firethefox77@gmail.com>"]
repository = "https://github.com/LowByteFox/ookami"
license = "ISC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "12.0.0"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
